add main-section  section within the body and header section within main-section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Rock Paper Scissors</title>
  </head>
  <body>
+    <section class="main-section">
+     <header class="header">
+
+     </header>
+
+    </section>
     
  </body>
  <script type="text/javascript" src="main.js"></script>
