add all h1 and h3's in the header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
  <body>
     <section class="main-section">
      <header class="header">
-
+       <h1 class="main-title">Rock,Paper,Scissors</h1>
+       <h3 class="choose-game">Choose your game!</h3>
+       <h3 class="choose-fighter">Choose your fighter!</h3>
+       <h3 class="you-won">You won this time! 😤</h3>
+       <h3 class="AI won">Mwahaha AI wins again!</h3>
      </header>
 
     </section>
