add human and computer win sections and button within human win section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
        <h3 class="choose-game">Choose your game!</h3>
        <h3 class="choose-fighter">Choose your fighter!</h3>
        <h3 class="you-won">You won this time! 😤</h3>
-       <h3 class="AI won">Mwahaha AI wins again!</h3>
+       <h3 class="computer-won">Mwahaha computer wins again!</h3>
      </header>
-
-    </section>
+     <section class="human-win-section">
+        <button class="change-game" type="submit">Change Game</button>
+     </section>
+     <section class="computer-win-section">
+        
+     </section>
     
+    </section>
  </body>
  <script type="text/javascript" src="main.js"></script>
 </html>
