--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
-    <title>Rock Paper Scissors</title>
- </head>
- <body>
-    <section class="main-section">
-     <header class="header">
-       <h1 class="main-title">Rock,Paper,Scissors</h1>
-       <h3 class="choose-game">Choose your game!</h3>
-       <h3 class="choose-fighter">Choose your fighter!</h3>
-       <h3 class="you-won">You won this time! 😤</h3>
-       <h3 class="computer-won">Mwahaha computer wins again!</h3>
-     </header>
-     <section class="human-win-section">
-        <button class="change-game" type="submit">Change Game</button>
-     </section>
-     <section class="computer-win-section">
-        
-     </section>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css" />
+        <title>Rock Paper Scissors</title>
+    </head>
+    <body class="body">
+        <section class="main-section">
+            <header class="header">
+                <h1 class="main-title">Rock,Paper,Scissors</h1>
+                <h3 class="choose-game">Choose your game!</h3>
+                <h3 class="choose-fighter">Choose your fighter!</h3>
+                <h3 class="you-won">You won this time! 😤</h3>
+                <h3 class="computer-won">Mwahaha computer wins again!</h3>
+            </header>
+            <section class="human-win-section">
+                <h1 class="human-emoji">👱🏻👩‍🦳</h1>
+                <h2 class="human-text">HUMAN</h2>
+                <h3 class="human-wins">Wins:</h3>
+                <button class="change-game" type="submit">Change Game?</button>
+            </section>
+            <section class="computer-win-section">
+                <h1 class="computer-emoji">💻</h1>
+                <h2 class="computer-text">COMPUTER</h2>
+                <h3 class="computer-wins">Wins:</h3>
+            </section>
     
-    </section>
- </body>
- <script type="text/javascript" src="main.js"></script>
+        </section>
+    </body>
+    <script type="text/javascript" src="main.js"></script>
 </html>
