add classic and difficult game box divs with associated h elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
                 <h3 class="you-won">You won this time! 😤</h3>
                 <h3 class="computer-won">Mwahaha computer wins again!</h3>
             </header>
+            <section class="game-type-section">
+                <div class="classic-game-box">
+                    <h2 class="classic-header">🤘Classic🤘</h2>
+                    <h3 class="rock-scissors">rock > scissors</h3>
+                    <h3 class="paper-rock">paper > rock</h3>
+                    <h3 class="scissors-paper">scissors > paper</h3>
+                </div>
+                <div class="difficult-game-box">
+                    <h2 class="difficult-header">👾Difficult👾</h2>
+                    <h3 class="rock-scissors-lizard">rock > scissors & lizard</h3>
+                    <h3 class="paper-rock-alien">paper > rock & alien</h3>
+                    <h3 class="scissors-paper-lizard">scissors > paper & lizard</h3>
+                    <h3 class="lizard-paper-alien">lizard > paper & alien</h3>
+                    <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
+                </div>
+            </section>
             <section class="human-win-section">
                 <h1 class="human-emoji">👱🏻👩‍🦳</h1>
                 <h2 class="human-text">HUMAN</h2>
