change some sections to articles and asides

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3 class="you-won">You won this time! 😤</h3>
                 <h3 class="computer-won">Mwahaha computer wins again!</h3>
             </header>
-            <section class="game-type-section">
+            <article class="game-type-section">
                 <div class="classic-game-box">
                     <h2 class="classic-header">🤘Classic🤘</h2>
                     <h3 class="rock-scissors">rock > scissors</h3>
@@ -33,18 +33,18 @@
                     <h3 class="lizard-paper-alien">lizard > paper & alien</h3>
                     <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
                 </div>
-            </section>
-            <section class="human-win-section">
+            </article>
+            <aside class="human-win-section">
                 <h1 class="human-emoji">👱🏻👩‍🦳</h1>
                 <h2 class="human-text">HUMAN</h2>
                 <h3 class="human-wins">Wins:</h3>
                 <button class="change-game" type="submit">Change Game?</button>
-            </section>
-            <section class="computer-win-section">
+            </aside>
+            <aside class="computer-win-section">
                 <h1 class="computer-emoji">💻</h1>
                 <h2 class="computer-text">COMPUTER</h2>
                 <h3 class="computer-wins">Wins:</h3>
-            </section>
+            </aside>
     
         </section>
     </body>
