refactor html and add some basic css styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body class="body">
-        <section class="main-section">
+        <aside class="human-win-section">
+            <h1 class="human-emoji">👱🏻👩‍🦳</h1>
+            <h2 class="human-text">HUMAN</h2>
+            <h3 class="human-wins">Wins:</h3>
+            <button class="change-game" type="submit">Change Game?</button>
+        </aside>
+        <section class="main-game-section">
             <header class="header">
                 <h1 class="main-title">Rock,Paper,Scissors</h1>
                 <h3 class="choose-game">Choose your game!</h3>
@@ -34,19 +40,15 @@
                     <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
                 </div>
             </article>
-            <aside class="human-win-section">
-                <h1 class="human-emoji">👱🏻👩‍🦳</h1>
-                <h2 class="human-text">HUMAN</h2>
-                <h3 class="human-wins">Wins:</h3>
-                <button class="change-game" type="submit">Change Game?</button>
-            </aside>
-            <aside class="computer-win-section">
-                <h1 class="computer-emoji">💻</h1>
-                <h2 class="computer-text">COMPUTER</h2>
-                <h3 class="computer-wins">Wins:</h3>
-            </aside>
-    
+            
         </section>
+        <aside class="computer-win-section">
+            <!-- <div class="computer-win-zone"><h1 class="computer-emoji">💻</h1> -->
+            <h2 class="computer-text">COMPUTER</h2>
+            <h3 class="computer-wins">Wins:</h3>
+        <!-- </div> -->
+        </aside>
+
     </body>
     <script type="text/javascript" src="main.js"></script>
 </html>
