add various css styling tweaks and the classic and difficult game sections in html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Itim&display=swap" rel="stylesheet">
         <title>Rock Paper Scissors</title>
     </head>
     <body class="body">
@@ -20,9 +20,6 @@
             <header class="header">
                 <h1 class="main-title">Rock,Paper,Scissors</h1>
                 <h3 class="choose-game">Choose your game!</h3>
-                <h3 class="choose-fighter">Choose your fighter!</h3>
-                <h3 class="you-won">You won this time! 😤</h3>
-                <h3 class="computer-won">Mwahaha computer wins again!</h3>
             </header>
             <article class="game-type-section">
                 <div class="classic-game-box">
@@ -40,6 +37,18 @@
                     <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
                 </div>
             </article>
+            <section class="view classic-game-view">
+                <img src="./assets/rock-hand.png" alt="rock hand">
+                <img src="./assets/happy-paper.png" alt="paper">
+                <img src="./assets/lines-scissors.png" alt="scissors">
+            </section>
+            <section class="view difficult-game-view">
+                <img src="./assets/rock-hand.png" alt="rock hand">
+                <img src="./assets/happy-paper.png" alt="paper">
+                <img src="./assets/lines-scissors.png" alt="scissors">
+                <img src="./assets/iguana.png" alt="iguana">
+                <img src="./assets/flat-alien.png" alt="alien">
+            </section>
             
         </section>
         <aside class="computer-win-section">
