add style for game sections in css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         </aside>
         <section class="main-game-section">
             <header class="header">
-                <h1 class="main-title">Rock,Paper,Scissors</h1>
+                <h1 class="main-title">Rock, Paper, Scissors</h1>
                 <h3 class="choose-game">Choose your game!</h3>
             </header>
-            <article class="game-type-section">
+            <section class="view game-type-view hidden">
+                <!-- <h3 class="choose-game">Choose your game!</h3> -->
                 <div class="classic-game-box">
                     <h2 class="classic-header">🤘Classic🤘</h2>
                     <h3 class="rock-scissors">rock > scissors</h3>
@@ -36,26 +37,27 @@
                     <h3 class="lizard-paper-alien">lizard > paper & alien</h3>
                     <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
                 </div>
-            </article>
+            </section>
             <section class="view classic-game-view">
+                <!-- <h3 class="choose-fighter">Choose your fighter!</h3> -->
                 <img src="./assets/rock-hand.png" alt="rock hand">
                 <img src="./assets/happy-paper.png" alt="paper">
                 <img src="./assets/lines-scissors.png" alt="scissors">
             </section>
             <section class="view difficult-game-view">
-                <img src="./assets/rock-hand.png" alt="rock hand">
+                <!-- <h3 class="choose-difficult-fighter">Choose your fighter!</h3> -->
+                <!-- <img src="./assets/rock-hand.png" alt="rock hand">
                 <img src="./assets/happy-paper.png" alt="paper">
-                <img src="./assets/lines-scissors.png" alt="scissors">
+                <img src="./assets/lines-scissors.png" alt="scissors"> -->
                 <img src="./assets/iguana.png" alt="iguana">
                 <img src="./assets/flat-alien.png" alt="alien">
             </section>
             
         </section>
         <aside class="computer-win-section">
-            <!-- <div class="computer-win-zone"><h1 class="computer-emoji">💻</h1> -->
+            <h1 class="computer-emoji">💻</h1>
             <h2 class="computer-text">COMPUTER</h2>
             <h3 class="computer-wins">Wins:</h3>
-        <!-- </div> -->
         </aside>
 
     </body>
