complete initial html and css styling

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
         <aside class="human-win-section">
             <h1 class="human-emoji">👱🏻👩‍🦳</h1>
             <h2 class="human-text">HUMAN</h2>
-            <h3 class="human-wins">Wins:</h3>
-            <button class="change-game" type="submit">Change Game?</button>
+            <h3 class="human-wins">Wins: 0</h3>
+            <button class="change-game-button" type="submit">Change Game?</button>
         </aside>
         <section class="main-game-section">
             <header class="header">
                 <h1 class="main-title">Rock, Paper, Scissors</h1>
                 <h3 class="choose-game">Choose your game!</h3>
             </header>
-            <section class="view game-type-view hidden">
-                <!-- <h3 class="choose-game">Choose your game!</h3> -->
+            <section class="game-type-view">
                 <div class="classic-game-box">
                     <h2 class="classic-header">🤘Classic🤘</h2>
                     <h3 class="rock-scissors">rock > scissors</h3>
@@ -38,17 +37,12 @@
                     <h3 class="alien-scissors-rock">alien > scissors & rock</h3>
                 </div>
             </section>
-            <section class="view classic-game-view">
-                <!-- <h3 class="choose-fighter">Choose your fighter!</h3> -->
+            <section class="classic-game-view hidden">
                 <img src="./assets/rock-hand.png" alt="rock hand">
                 <img src="./assets/happy-paper.png" alt="paper">
                 <img src="./assets/lines-scissors.png" alt="scissors">
             </section>
-            <section class="view difficult-game-view">
-                <!-- <h3 class="choose-difficult-fighter">Choose your fighter!</h3> -->
-                <!-- <img src="./assets/rock-hand.png" alt="rock hand">
-                <img src="./assets/happy-paper.png" alt="paper">
-                <img src="./assets/lines-scissors.png" alt="scissors"> -->
+            <section class="difficult-game-view hidden">
                 <img src="./assets/iguana.png" alt="iguana">
                 <img src="./assets/flat-alien.png" alt="alien">
             </section>
@@ -57,7 +51,7 @@
         <aside class="computer-win-section">
             <h1 class="computer-emoji">💻</h1>
             <h2 class="computer-text">COMPUTER</h2>
-            <h3 class="computer-wins">Wins:</h3>
+            <h3 class="computer-wins">Wins: 0</h3>
         </aside>
 
     </body>
