add queryselectors in JS and add classes to fighter images

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 </div>
             </section>
             <section class="classic-game-view hidden">
-                <img src="./assets/rock-hand.png" alt="rock hand">
-                <img src="./assets/happy-paper.png" alt="paper">
-                <img src="./assets/lines-scissors.png" alt="scissors">
+                <img class="rock-fighter" src="./assets/rock-hand.png" alt="rock hand">
+                <img class="paper-fighter" src="./assets/happy-paper.png" alt="paper">
+                <img class="scissors-fighter" src="./assets/lines-scissors.png" alt="scissors">
             </section>
             <section class="difficult-game-view hidden">
-                <img src="./assets/iguana.png" alt="iguana">
-                <img src="./assets/flat-alien.png" alt="alien">
+                <img class="iguana-fighter" src="./assets/iguana.png" alt="iguana">
+                <img class="alien-fighter" src="./assets/flat-alien.png" alt="alien">
             </section>
             
         </section>
