add all event listeners and connect them to the needed functions as well as add functionality to display each choice in a given section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <img class="alien-fighter" src="./assets/flat-alien.png" alt="alien">
             </section>
             <section class="fighter-game-view hidden">
-                <div class="user-choice"></div>
-                <div class="computer-choice"></div>
+                <div class="human-choice-display"></div>
+                <div class="computer-choice-display"></div>
             </section>
         </section>
         <aside class="computer-win-section">
